fix and style
